# leakguard

./: .pre-commit-hooks.yaml  CHANGELOG.md  README.md  pyproject.toml  textleaks.yaml
.github/: dependabot.yml
.github/workflows/: security-scan.yml  test.yml
docs/: leak-classes.md
src/leakguard/: __init__.py  __main__.py  catalog.py  cli.py  scanner.py
src/leakguard/data/: starter-catalog.yaml  template.yaml
src/textleaks/: __init__.py  __main__.py  catalog.py  cli.py
src/textleaks/data/: starter-catalog.yaml  template.yaml
tests/: test_scanner.py
tests/fixtures/: clean.md  leaky.md
