[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leakguard"
version = "0.1.1"
description = "Pre-publish scanner for narrative-style internal-context leaks in public repos."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "Nader Helmy" }]
keywords = ["pre-commit", "security", "leak", "audit", "oss", "scanner"]
dependencies = ["pyyaml>=6"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/creatornader/leakguard"
Repository = "https://github.com/creatornader/leakguard"
Issues = "https://github.com/creatornader/leakguard/issues"

[project.scripts]
leakguard = "leakguard.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"leakguard.data" = ["*.yaml"]
