[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textleaks"
version = "0.2.0"
description = "Pre-publish scanner for narrative-style internal-context leaks in public repos. The text-content companion to gitleaks."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "Nader Helmy" }]
keywords = ["pre-commit", "security", "leak", "audit", "oss", "scanner"]
dependencies = ["pyyaml>=6"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/creatornader/textleaks"
Repository = "https://github.com/creatornader/textleaks"
Issues = "https://github.com/creatornader/textleaks/issues"

[project.scripts]
textleaks = "textleaks.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"textleaks.data" = ["*.yaml"]
